--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
              <option value="3">Valor 3</option>
 
         </select>
+        <select onchange="funcaoChange(this)">
+            <option value="1">Valor 1</option>
+             <option value="2">Valor 2</option>
+             <option value="3">Valor 3</option>
+            
+        </select>
     </body>
 </html>
